# llm-zoomcamp

./: CLAUDE.md  javascript-toolchain.md  project-technologies.md  python-learning-path.md  python-toolchain.md  rag-canonical-workflow.md  rag-lessons.md  rag-sample.md  rag-starter-advice.md  rag-technology-mapping.md  toolchain-recommendation.md
starter-app/: .gitignore  README.md  app.py  config.py  evaluate.py  ingest.py  pyproject.toml  rag.py
starter-app/eval/: questions.json
