[project]
name = "rag-starter"
version = "0.1.0"
description = "Walking-skeleton RAG app: ingest -> retrieve -> prompt -> LLM -> evaluate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0",
    "openai>=2.40.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "streamlit>=1.58.0",
    "tqdm>=4.67.3",
]
